--- a/genemethods/meta.yaml
+++ b/genemethods/meta.yaml
@@ -1,8 +1,8 @@
 {% set name = "genemethods" %}
-{% set version = "0.0.0.5" %}
+{% set version = "0.0.0.10" %}
 {% set file_ext = "tar.gz" %}
 {% set hash_type = "sha256" %}
-{% set hash_value = "fc0e55e4a2f99897a5cf29e656738465ae754dd47b8ae7a02e31054f63e3d8e2" %}
+{% set hash_value = "b561e482f299e4695d3c7d95060cd304c1bed85be6faf5f72034b2a55765984d" %}
 
 package:
   name: '{{ name|lower }}'
@@ -23,25 +23,29 @@ requirements:
     - python >=3
 
   run:
-    - olctools=1.1.0=py_0
+    - olctools=1.1.1=py_0
+    - genewrappers=0.0.0.3=py_0
     - python=3.6.8=h0371630_0
     - pysam=0.15.2=py36h4b7d16d_3
     - seaborn=0.9.0=py_0
     - psutil=5.6.2=py36h516909a_0
 test:
   imports:
-    - geneseekr
-    - coreGenome
-    - customsippr
-    - MASHsippr
-    - MLSTsippr
-    - genesippr
-    - pointfinder
-    - pointsippr
-    - serosippr
-    - sipprCommon
-    - sipprverse_reporter
-    - sixteenS
+    - genemethods
+    - genemethods.geneseekr
+    - genemethods.coreGenome
+    - genemethods.customsippr
+    - genemethods.MASHsippr
+    - genemethods.MLSTsippr
+    - genemethods.genesippr
+    - genemethods.pointfinder
+    - genemethods.pointsippr
+    - genemethods.serosippr
+    - genemethods.sipprCommon
+    - genemethods.sipprverse_reporter
+    - genemethods.sixteenS
+    - genemethods.typingclasses
+    - tests
 about:
   home: https://github.com/OLC-Bioinformatics/genemethods
   license: MIT
